// Copyright (c) 2020 The Orbit Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

message ModuleInformation {
  string module_path = 1;
  repeated FunctionInformation functions = 2;
}

message FunctionInformation {
  uint64 offset = 1;
  uint64 size = 2;
}